fix nav-link styling on small screens

--- a/Files/Stylesheets/MediaQueries.css
+++ b/Files/Stylesheets/MediaQueries.css
@@ -55,6 +55,10 @@
     background-color: var(--elevated2);
     transform: scale(1.01);
   }
+
+  ul li a.nav-link {
+    background-color: var(--elevated1);
+  }
 }
 
 /* Wide screens */
@@ -81,5 +85,9 @@
     left: 0;
     top: 0;
     width: 266px;
+  }
+
+  ul li a.nav-link {
+    background-color: var(--sidebar);
   }
 }
